--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.1",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
